<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:order="10"
        android:title="@string/display">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/ic_baseline_brightness_medium_24"
            android:key="night_mode_list"
            android:summary="@string/light"
            android:title="@string/theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:order="20"
        android:title="@string/contents">
        <ListPreference
            android:defaultValue="popular"
            android:entries="@array/movie_entries"
            android:entryValues="@array/movie_values"
            android:icon="@drawable/ic_baseline_movie_24"
            android:key="movie_list"
            android:summary="@string/popular"
            android:title="@string/movies"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="popular"
            android:entries="@array/tv_entries"
            android:entryValues="@array/tv_values"
            android:icon="@drawable/ic_baseline_live_tv_24"
            android:key="tv_list"
            android:summary="@string/popular"
            android:title="@string/tv_series"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="en-US"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:icon="@drawable/ic_baseline_translate_24"
            android:key="language_list"
            android:summary="@string/english"
            android:title="@string/language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>